--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.datasource.url=jdbc:h2:mem:mem:Db;
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=pttrdeveloper
 spring.datasource.password=
+
+spring.batch.jdbc.initialize-schema=always
+
